--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <title>Meu Portifólio</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-    
     <header>
-
+        <nav id="menu">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-code"></i> </a></li>
+                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i> </a></li>
+                <li><a href="#"><i class="fa-solid fa-diagram-project"></i> </a></li>
+                <li><a href="#"><i class=" fa-notdog fa-solid fa-moon"></i> </a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Em breve</h1>
