--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
         </nav>
     </header>
     <main>
-        <h1>Em breve</h1>
+        <div id="perfil">
+            <img src="imagens/Eduardo-perfil.PNG" alt="minha foto">
+            <h1>Eduardo Bezerra</h1>
+            <p>Sou formado em Informática para Internet pelo IFPE, apaixonado por tecnologia e atualmente explorando Inteligência Artificial. Tenho facilidade em aprender, gosto de desafios e busco sempre evoluir como programador. Nos momentos livres, encontro inspiração em jogos e animes, que reforçam minha criatividade e dedicação.</p>
+            <nav id="rede">
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/eduardo-bezerra-4856971a4" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/edukaze" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.instagram.com/edukaze" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
     <footer>
 
