adicionando grid e botao de modo escuro e claro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#"><i class="fa-solid fa-code"></i> </a></li>
                 <li><a href="#"><i class="fa-solid fa-graduation-cap"></i> </a></li>
                 <li><a href="#"><i class="fa-solid fa-diagram-project"></i> </a></li>
-                <li><a href="#"><i class=" fa-notdog fa-solid fa-moon"></i> </a></li>
+                <li><a href="#" id="botao-tema"><i class=" fa-notdog fa-solid fa-moon"></i> </a></li>
             </ul>
         </nav>
     </header>
