criando section de minhas skills

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <header>
-        <nav id="menu">
+        <nav id="menu" role="banner">
             <ul>
                 <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-code"></i> </a></li>
+                <li><a href="#"><i class="fa-solid fa-brain"></i> </a></li>
                 <li><a href="#"><i class="fa-solid fa-graduation-cap"></i> </a></li>
                 <li><a href="#"><i class="fa-solid fa-diagram-project"></i> </a></li>
                 <li><a href="#" id="botao-tema"><i class=" fa-notdog fa-solid fa-moon"></i> </a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main role="main">
         <div id="perfil">
             <img src="imagens/Eduardo-perfil.PNG" alt="minha foto">
             <h1>Eduardo Bezerra</h1>
@@ -32,6 +32,94 @@
                     <li><a href="https://www.instagram.com/edukaze" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </nav>
+        </div>
+        <div id="detalhes">
+            <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
+           <section class="skills">
+            <!--coluna 1 -->
+            <div class="skill" style="--porcentagem: 90;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-code"></i>HTML5</span>
+                    <span class="porcentagem">90%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 75;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-code"></i>CSS3</span>
+                    <span class="porcentagem">75%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="75">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 70;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-code"></i>JavaScript</span>
+                    <span class="porcentagem">70%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 60;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-code"></i>PHP</span>
+                    <span class="porcentagem">60%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60">
+                    </div>
+                </div>    
+            </div>
+            
+            <!--coluna 2 -->
+            <div class="skill" style="--porcentagem: 95;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-comments"></i>Comunicação</span>
+                    <span class="porcentagem">95%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="95">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 80;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-shuffle"></i>Adaptabilidade</span>
+                    <span class="porcentagem">80%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 90;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-people-group"></i>Trabalho em equipe</span>
+                    <span class="porcentagem">90%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
+                    </div>
+                </div>    
+            </div>
+            <div class="skill" style="--porcentagem: 80;">
+                <div class="titulo">
+                    <span class="esquerda"><i class="fa-solid fa-exclamation"></i>Solução de Problema</span>
+                    <span class="porcentagem">80%</span>
+                </div>
+                <div class="barra-fundo">
+                    <div class="cor-barra" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80">
+                    </div>
+                </div>    
+            </div>
+           </section>
         </div>
     </main>
     <footer>
