bug em alinhamento de grid (concertado)

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </ul>
             </nav>
         </div>
-        <div id="detalhes">
-            <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
-           <section class="skills">
+        <div class="detalhes">
+            <section class="skills">
+               <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
             <!--coluna 1 -->
             <div class="skill" style="--porcentagem: 90;">
                 <div class="titulo">
@@ -120,6 +120,11 @@
                 </div>    
             </div>
            </section>
+        </div>
+        <div class="detalhes">
+            <section id="formacao">
+             <h1><i class="fa-solid fa-graduation-cap"></i>Formação</h1>
+            </section>
         </div>
     </main>
     <footer>
