--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="detalhes">
-            <section class="skills">
+        
+            <section id="skills">
                <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
             <!--coluna 1 -->
             <div class="skill" style="--porcentagem: 90;">
@@ -120,12 +120,17 @@
                 </div>    
             </div>
            </section>
-        </div>
-        <div class="detalhes">
-            <section id="formacao">
-             <h1><i class="fa-solid fa-graduation-cap"></i>Formação</h1>
-            </section>
-        </div>
+           <section id="formacoes">
+                <h1><i class="fa-solid fa-graduation-cap"></i>Formação</h1>
+                <div class="formacao">
+                    <div class="titulo-formacao">
+                        <p class="data">2019-2021</p>
+                        <p class="instituicao">IFPE - Instituto Federal de Pernambuco</p>
+                        <p class ='curso'>IPI - Informática Para Internet</p>     
+                    </div>
+                </div>
+           </section>
+        
     </main>
     <footer>
 
