--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </div>
-        
+        <!--SKILLS-->
             <section id="skills">
                <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
             <!--coluna 1 -->
@@ -119,8 +119,9 @@
                     </div>
                 </div>    
             </div>
-           </section>
-           <section id="formacoes">
+            </section>
+           <!--FORMAÇÃO-->
+            <section id="formacoes">
                 <h1><i class="fa-solid fa-graduation-cap"></i>Formação</h1>
                 <div class="formacao">
                     <div class="titulo-formacao">
