--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <nav id="menu" role="banner">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i> </a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i> </a></li>
-                <li><a href="#"><i class="fa-solid fa-diagram-project"></i> </a></li>
+                <li><a href="#perfil" class="link"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i> </a></li>
+                <li><a href="#formacoes" class="link"><i class="fa-solid fa-graduation-cap"></i> </a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-diagram-project"></i> </a></li>
                 <li><a href="#" id="botao-tema"><i class=" fa-notdog fa-solid fa-moon"></i> </a></li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
             </nav>
         </div>
         <!--SKILLS-->
-            <section id="skills">
+            <section id="skills" role="skills">
                <h1><i class="fa-solid fa-brain"></i>Minhas skills</h1>
             <!--coluna 1 -->
             <div class="skill" style="--porcentagem: 90;">
@@ -121,7 +121,7 @@
             </div>
             </section>
            <!--FORMAÇÃO-->
-            <section id="formacoes">
+            <section id="formacoes" role="formação">
                 <h1><i class="fa-solid fa-graduation-cap"></i>Formação</h1>
                 <div class="formacao">
                     <div class="titulo-formacao">
@@ -131,7 +131,51 @@
                     </div>
                 </div>
            </section>
-        
+           <!--PROJETOS-->
+           <section id="projetos" role="projetos">
+            <h1><i class="fa-solid fa-diagram-project"></i>Projetos</h1>
+            <div class="projeto">
+                <img src="imagens/projeto-login.jpg" alt="projeto login">
+                <div class="text">
+                    <p class="ano">2025</p>
+                    <h2>Projeto Login</h2>
+                    <p>Projeto Construido para treina responsividade e formulários em uma das telas mais populares em sistemas.</p>
+                    <button class="saiba-mais">Saiba mais...</button>
+                    <p class="extra-texto">Para construir essa página, utilizei HTML5 para estruturar o conteúdo semântico, garantindo acessibilidade e clareza no código. O CSS3 foi aplicado para estilização avançada, incluindo variáveis de cores, bordas arredondadas, sombras, flexbox e grid para organizar os elementos de forma responsiva. Para interação, o JavaScript controla o botão “Saiba mais”, que alterna a exibição de texto extra, a troca dinâmica de tema claro/escuro e o scroll suave para navegação interna. Também usei Font Awesome para ícones, que dão suporte visual consistente e melhoram a experiência do usuário</p>
+                </div>
+            </div>
+            <div class="projeto">
+                <img src="imagens/projeto-04-links.jpg" alt="projeto links">
+                <div class="text">
+                    <p class="ano">2025</p>
+                    <h2>Projeto Links</h2>
+                    <p>Projeto que simula um celular com links para várias redes sociais, permitindo navegar entre páginas dentro do próprio dispositivo usando apenas HTML e CSS.</p>
+                    <button class="saiba-mais">Saiba mais...</button>
+                    <p class="extra-texto">O principal destaque do projeto é o uso do iframe, que permite carregar diferentes páginas sem sair do layout do celular. Os ícones das redes sociais funcionam como botões que trocam o conteúdo exibido no iframe. Todo o estilo e posicionamento do celular e dos ícones são feitos com CSS, garantindo um efeito visual interativo e responsivo.</p>
+                </div>
+            </div>
+            <div class="projeto">
+                <img src="imagens/projeto-02-cordel.jpg" alt="projeto Cordel">
+                <div class="text">
+                    <p class="ano">2025</p>
+                    <h2>Projeto Cordel</h2>
+                    <p>Um site simples que apresenta a poesia “Cordel Moderno”, combinando tipografia tradicional com um layout limpo e agradável, destacando as estrofes em seções alternadas.</p>
+                    <button class="saiba-mais">Saiba mais...</button>
+                    <p class="extra-texto">O projeto utiliza HTML5 para estruturar o conteúdo em seções (section) e CSS3 para aplicar o efeito de parallax nas seções com imagens de fundo. Esse efeito cria uma sensação de profundidade, mantendo o conteúdo do texto fixo enquanto o fundo se move ao rolar a página.</p>
+                </div>
+            </div>
+            <div class="projeto">
+                <img src="imagens/projeto-03-android.jpg" alt="projeto android">
+                <div class="text">
+                    <p class="ano">2025</p>
+                    <h2>Projeto Android</h2>
+                    <p>Projeto de artigo web responsivo, que apresenta a história do mascote do Android, combinando textos, imagens e vídeos de forma organizada e visualmente atraente.</p>
+                    <button class="saiba-mais">Saiba mais...</button>
+                    <p class="extra-texto">O projeto foi desenvolvido utilizando HTML semântico para estruturar conteúdos como header, main, article, aside e footer, garantindo acessibilidade e SEO. O CSS aplicou gradientes, variáveis CSS para cores e fontes personalizadas, e responsividade com max-width e media queries para imagens e vídeos. Além disso, o layout centralizado e sombras sutis conferem destaque ao conteúdo. O projeto foi realizado para pratica tags e a criação do primeiro conteúdo </p>
+                </div>
+            </div>
+           </section>
+
     </main>
     <footer>
 
