colocando  footer e alinhando main

--- a/index.html
+++ b/index.html
@@ -188,7 +188,12 @@
 
     </main>
     <footer>
-
+        <p>© 2025 - Eduardo Bezerra | Desenvolvido com 💻 e ☕</p>
+  <nav class="footer-links">
+    <a href="https://github.com/edukaze" target="_blank"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/eduardo-bezerra-4856971a4" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/edukaze" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+  </nav>
     </footer>
 
     <script src="scripts/script.js"></script>
